# ferret_hypergraph

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  hypergraph_concept.dot
examples/: documentation_image.rs
src/: direction.rs  elements.rs  errors.rs  hyper_graph.rs  hypergraph.rs  iterators.rs  lib.rs  traits.rs  walkers.rs
src/hypergraph/: add.rs  classes.rs  clear.rs  extend.rs  find.rs  get.rs  remove.rs  set.rs  transform.rs  visualize.rs
src/iterators/: id_iter.rs  neighbor_iter.rs
src/walkers/: id_walk.rs  neighbor_walk.rs  walk_ids.rs  walk_neighbors.rs
